# prevelop

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
archive/: PrEvelOp_CAPicard_Bu_02.py  PrEvelOp_ortlinghaus_clustering.ipynb  PrEvelOp_ortlinghaus_data cleaning.ipynb
notebooks/: C:\Users\IM-KI\Documents\PrEvelOp_Daten_Römheld\results.xlsx  exploration.ipynb  prevelop_capicard.ipynb  prevelop_capicard_2.ipynb  prevelop_roemheld.ipynb  prevelop_roemheld_2.ipynb  prevelop_roemheld_3.ipynb  prevelop_stahlwille.ipynb
notebooks/demo_data/: CAPicard_cad_data_sample.xlsx  CAPicard_link_data_sample.xlsx  CAPicard_process_data_sample.xlsx  Römheld_cad.xlsx  Römheld_prozess.xlsx  Römheld_teile_zeichnungen.xlsx  Stahlwille_cad.xlsx  csvfolding-2025-02-26_14-05-26.csv  csvfolding-2025-02-26_16-43-04.csv  stahlwille_cad_converted.xlsx
src/: PrEvelOp_CAPicard_Bu_02.ipynb  PrEvelOp_mkPlast_Bu.ipynb  prevelop_capicard.ipynb  setup.py
src/PrEvelOp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/prevelop/: __init__.py  clustering.py  data.py  evaluation.py  exploration.py  preparation.py  prevelop_018.py
